// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KAlert Renders danger variant 1`] = `
<div role="alert" class="k-alert danger alert none" message="I am danger">
  <!---->
  <div class="alert-action ml-3 danger">
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <div class="alert-msg-text"><span class="alert-msg">
      </span>
    <!---->
  </div>
</div>
`;

exports[`KAlert Renders info variant 1`] = `
<div role="alert" class="k-alert info alert none" message="I am info">
  <!---->
  <div class="alert-action ml-3 info">
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <div class="alert-msg-text"><span class="alert-msg">
      </span>
    <!---->
  </div>
</div>
`;

exports[`KAlert Renders success variant 1`] = `
<div role="alert" class="k-alert success alert none" message="I am success">
  <!---->
  <div class="alert-action ml-3 success">
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <div class="alert-msg-text"><span class="alert-msg">
      </span>
    <!---->
  </div>
</div>
`;

exports[`KAlert Renders warning variant 1`] = `
<div role="alert" class="k-alert warning alert none" message="I am warning">
  <!---->
  <div class="alert-action ml-3 warning">
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <div class="alert-msg-text"><span class="alert-msg">
      </span>
    <!---->
  </div>
</div>
`;
